FIX: navbar nowrap

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11259,6 +11259,7 @@ template {
 
 .FAQ__content {
   text-align: left;
+  transition: 1s;
 }
 
 .FAQ__content--noMargin {
@@ -11269,8 +11270,16 @@ template {
   margin: 0;
 }
 
-.FAQ__content__extendedWrapper--extended {
-  display: none;
+.FAQ__content__collapsedWrapper {
+  overflow: hidden;
+  transition: transform 0.3s ease-out;
+  height: auto;
+  transform-origin: top;
+  transform: scaleY(1);
+}
+
+.FAQ__content__collapsedWrapper--collapsed {
+  transform: scaleY(0);
 }
 
 .FAQ__btn {
@@ -11421,9 +11430,10 @@ template {
 .navLinks__hash {
   color: #010101;
   text-decoration: none;
+  white-space: nowrap;
   width: 100%;
   height: 100%;
-  padding: 34px 10px;
+  padding: 35px 10px;
   box-sizing: border-box;
   border-bottom: 3px solid transparent;
   display: block;
@@ -11571,6 +11581,7 @@ template {
   max-width: 35px;
   height: auto;
   margin-right: 10px;
+  cursor: pointer;
 }
 
 .devBtn:after {
