--- a/resources/sass/_navbar.scss
+++ b/resources/sass/_navbar.scss
@@ -76,9 +76,10 @@
     &__hash {
         color: $c-black;
         text-decoration: none;
+        white-space: nowrap;
         width: 100%;
         height: 100%;
-        padding: 34px 10px;
+        padding: 35px 10px;
         box-sizing: border-box;
         border-bottom: 3px solid transparent;
         display: block;
